# amazing-42

./: .gitignore  Makefile  README.md  STUDENT_A_README_SECTION.md  a_maze_ing.py  ascii_renderer.py  cli.py  colors.py  config.py  config.txt  errors.py  maze.txt  maze_generator.py  maze_types.py  mazegen-1.0.0-py3-none-any.whl  mazegen-1.0.1-py3-none-any.whl  pyproject.toml  renderer.py  requirements.txt  solver.py  validators.py  writer.py
mazegen/: README.md  __init__.py  generator.py
tester/: README.md  output_validator.py  run_all.py  test_config.py  test_e2e.py  test_generator.py  test_packaging.py  test_solver.py
tests/: test_ascii_renderer.py  test_e2e.py  test_solver.py  test_solver.py   test_writer.py
