[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Randomised recursive backtracker maze generator with an embedded '42' stencil and BFS solver."
readme = "mazegen/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "M4F-S" },
]
keywords = ["maze", "generator", "backtracker", "42"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.urls]
Repository = "https://github.com/M4F-S/amazing-42"

[tool.setuptools.packages.find]
include = ["mazegen*"]
exclude = ["tests*"]
